[package]
name = "exp-disk"
version = "0.1.0"
authors = ["Clint Frederickson <clint.frederickson@ironcorelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


#tokio = { version = "~0.2.9", features = ["rt-threaded", "macros", "sync"] }
tokio = { version = "~0.2.21", features = ["full"] }
futures = "0.3.5"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
bincode = "1.2.1"
base64 = "0.12.1"
rand = "0.7.3"
[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

#futures = "0.3"
